--- a/Linear_and_Multiple_Regression_Python.ipynb
+++ b/Linear_and_Multiple_Regression_Python.ipynb
@@ -1232,7 +1232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multiple Regression in R\n",
+    "# Multiple Regression in Python\n",
     "#### Unlike the above case, use multiple inputs (x features) to predict a single output (y values)."
    ]
   },
